feat: update mc to 1.21 pre3